# bootimgtool

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  bootimg.h  bootimgtool.c  bootimgtool.h  configure.ac  io.c  io.h  sha.c  sha.h  variant_fsl.c  variant_qcom.c  variant_standard.c
